added subscribe API

--- a/i18n/messages/ua.json
+++ b/i18n/messages/ua.json
@@ -60,7 +60,8 @@
   "modals": {
     "modal_subscribe": {
       "title": "Дякуємо за підписку!",
-      "description": "Тепер Ви будете першими отримувати повідомлення щодо наших новин та подій!"
+      "description": "Тепер Ви будете першими отримувати повідомлення щодо наших новин та подій!",
+      "error_message": "Щось пішло не так. Будь ласка, спробуйте ще раз."
     },
     "modal_parthner": {
       "title": "Дякуємо за заявку!",
