--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -61,7 +61,8 @@
   "modals": {
     "modal_subscribe": {
       "title": "Thank you for subscribing!",
-      "description": "Now you will be the first to receive notifications about our news and events!"
+      "description": "Now you will be the first to receive notifications about our news and events!",
+      "error_message": "Something went wrong. Please try again."
     },
     "modal_parthner": {
       "title": "Thank you for your application!",
