--- a/i18n/messages/ua.json
+++ b/i18n/messages/ua.json
@@ -60,7 +60,7 @@
   "modals": {
     "modal_subscribe": {
       "title": "Дякуємо за підписку!",
-      "description": "Тепер Ви будете першими отримувати повідомлення щодо наших новин та подій!",
+      "description": "Ми надіслали вам лист для підтвердження підписки. Будь ласка, перейдіть за посиланням у листі, щоб завершити підписку!",
       "error_message": "Щось пішло не так. Будь ласка, спробуйте ще раз."
     },
     "modal_parthner": {
